--- a/research.html
+++ b/research.html
@@ -176,7 +176,7 @@
                         <li class="bullet-point" data-pdf-filename="data/2020_ReflectionMapEstimation-compressed.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="40">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, J. Zhao, D. Medeiros, T. Rhee, <quotestyle>"Reconstructing Reflection Maps using a Stacked-CNN for Mixed Reality Rendering"</quotestyle>, IEEE Transactions on Visualization and Computer Graphics (TVCG), 2020, presented at IEEE International Symposium on Mixed and Augmented Reality (ISMAR), 2021 <a href="data/2020_ReflectionMapEstimation-compressed.pdf" target="_blank">[pdf]</a> <a href="data/2020_ReflectionMapEstimation-appendix.pdf" target="_blank">[appendix]</a>.</li>
-                        <li class="bullet-point" data-pdf-filename="data/2020_IlluminationSpace-compressed.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2020_IlluminationSpace-compressed.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="25">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, T. Zickler, T. Rhee, <quotestyle>"Illumination Space: A Feature Space for Radiance Maps"</quotestyle>, Pacific Graphics, 2020 <a href="data/2020_IlluminationSpace-compressed.pdf" target="_blank">[pdf]</a>.</li>
                         <li class="bullet-point" data-pdf-filename="data/dummy.pdf">
@@ -207,11 +207,11 @@
 
                     <h3 style="text-align: left;">2018</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/2018_MR360-Interactive.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2018_MR360-Interactive.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="27">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, M. Hicks, K. Kumagai, B. Allen, I. Loh, L. Petikam, K. Anjyo, <quotestyle>"MR360 interactive: playing with digital creatures in 360° videos"</quotestyle>, SIGGRAPH Asia 2018 Virtual & Augmented Reality, 2018 (2nd place award).</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/2018_MagicWand.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2018_MagicWand.pdf" data-pdf-page="4" data-pdf-Off-Set-Y="-13">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">C. J. Dean, J.P. Lewis, <b>A. Chalmers</b>, <quotestyle>"A magic wand for motion capture editing and edit propagation"</quotestyle>, SIGGRAPH Asia 2018 Technical Briefs, 2018.</div>
                         </li>
@@ -219,7 +219,7 @@
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, <b>A. Chalmers</b>, I. Loh, B. Allen, L. Petikam, S. Thompson, T. Revill, <quotestyle>"Mixed reality 360 live: live blending of virtual objects into 360° streamed video"</quotestyle>, ACM SIGGRAPH 2018 Real-Time Live!, 2018.</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/2018_VisualPerceptionDepthMap-compressed.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2018_VisualPerceptionDepthMap-compressed.pdf" data-pdf-page="5" data-pdf-Off-Set-Y="30">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">L. Petikam, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Visual Perception of Real World Depth Map Resolution for Mixed Reality"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), 2018.</div>
                         </li>
@@ -232,11 +232,11 @@
 
                     <h3 style="text-align: left;">2017</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/2017_MR360.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2017_MR360.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="40">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">T. Rhee, L. Petikam, B. Allen, <b>A. Chalmers</b>, <quotestyle>"MR360: Mixed Reality Rendering for 360° Panoramic Videos"</quotestyle>, IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR), IEEE Transactions on Visualization and Computer Graphics (TVCG), 2017.</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/2017_CG_Course.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2017_CG_Course.pdf" data-pdf-page="5" data-pdf-Off-Set-Y="30">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">N. A. Dodgson and <b>A. Chalmers</b>, <quotestyle>"Designing a computer graphics course for first year undergraduates"</quotestyle>, Eurographics, 2017.</div>
                         </li>
@@ -244,7 +244,7 @@
 
                     <h3 style="text-align: left;">2015</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/2015_Synthesising_RM.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2015_Synthesising_RM.pdf" data-pdf-page="2" data-pdf-Off-Set-Y="40">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text">W. Ma, T. Iorns, <b>A. Chalmers</b>, T. Rhee, <quotestyle>"Synthesising Radiance Maps from Legacy Outdoor Photographs for Real-time IBL on HMDs"</quotestyle>, IVCNZ, 2015.</div>
                         </li>
@@ -256,7 +256,7 @@
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, J. Choi, T. Rhee, <quotestyle>"Perceptually Optimised Illumination for Seamless Composites"</quotestyle>, Pacific Graphics, 2014</div>
                         </li>
-                        <li class="bullet-point" data-pdf-filename="data/2014_SkyBrowser-compressed.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2014_SkyBrowser-compressed.pdf" data-pdf-page="1" data-pdf-Off-Set-Y="15">
                             <a class="pdf-link" href="data/2014_SkyBrowser-compressed.pdf" target="_blank"> <canvas class="pdf-canvas" width="100" height="100"></canvas></a>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, J.P. Lewis, P. Hillman, C. Tait, T. Rhee, <quotestyle>"Sky Browser: Search for HDR Sky Maps"</quotestyle>, Pacific Graphics, 2014 <a href="data/2014_SkyBrowser-compressed.pdf" target="_blank">[pdf]</a>.</div>
                         </li>
@@ -264,7 +264,7 @@
 
                     <h3 style="text-align: left;">2013</h3>
                     <ul class="bullet-list">
-                        <li class="bullet-point" data-pdf-filename="data/2013_Perceptual_IBL.pdf">
+                        <li class="bullet-point" data-pdf-filename="data/2013_Perceptual_IBL.pdf" data-pdf-page="4" data-pdf-Off-Set-Y="33">
                             <canvas class="pdf-canvas" width="100" height="100"></canvas>
                             <div class="bullet-point-text"><b>A. Chalmers</b>, J. Choi, T. Rhee, <quotestyle>"Perceptually Based Radiance Map for Realistic Composition"</quotestyle>, IVCNZ, 2013.</div>
                         </li>
